projects/compiler/test/typechecker/return/error_unreachable_stmt_plain.out
Error at %FILE_NAME%:3:3
Unreachable code
  |    val x = 123
       ^
Control flow exits before this code is reached
