projects/compiler/test/typechecker/return/error_unreachable_stmt_plain.abra
func foo(): Int {
  return 123
  val x = 123
}